--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@expo/react-native-image-gallery",
-  "version": "1.0.4",
+  "version": "2.0.1",
+  "author": "support@expo.io",
   "files": [
     "lib"
   ],
@@ -8,18 +9,15 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "mirror-creator": "^1.1.0",
-    "react-addons-pure-render-mixin": "^15.3.2",
-    "react-mixin": "^3.0.5",
-    "react-native-timer-mixin": "^0.11.0",
+    "prop-types": "^15.6.0",
     "react-redux": "^4.4.5",
     "react-timer-mixin": "^0.13.3",
     "redux": "^3.5.2"
   },
   "peerDependencies": {
-    "react": "*",
-    "@expo/ex-navigation": "*",
     "expo": "*",
-    "react-native": "*"
-  },
-  "license": "MIT"
+    "react": "*",
+    "react-native": "*",
+    "react-navigation": "*"
+  }
 }
