--- a/example/app.json
+++ b/example/app.json
@@ -3,17 +3,10 @@
     "name": "image-gallery-example",
     "description": "An example project using https://github.com/expo/react-native-image-gallery",
     "slug": "image-gallery-example",
-    "sdkVersion": "21.0.0",
+    "sdkVersion": "32.0.0",
     "version": "1.0.0",
     "orientation": "portrait",
     "primaryColor": "#cccccc",
-    "icon": "https://s3.amazonaws.com/exp-brand-assets/ExponentEmptyManifest_192.png",
-    "loading": {
-      "icon": "https://s3.amazonaws.com/exp-brand-assets/ExponentEmptyManifest_192.png",
-      "hideExponentText": false
-    },
-    "packagerOpts": {
-      "assetExts": ["ttf", "mp4"]
-    }
+    "icon": "https://s3.amazonaws.com/exp-brand-assets/ExponentEmptyManifest_192.png"
   }
 }
