--- a/example/package.json
+++ b/example/package.json
@@ -4,10 +4,13 @@
   "author": "support@expo.io",
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
-    "@expo/react-native-image-gallery": "../",
-    "expo": "^21.0.0",
-    "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-21.0.2.tar.gz",
-    "react-navigation": "^1.0.0-beta.12"
+    "@expo/react-native-image-gallery": "../expo-react-native-image-gallery-2.3.0.tgz",
+    "expo": "^32.0.1",
+    "react": "16.5.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-navigation": "^3.0.9"
+  },
+  "devDependencies": {
+    "babel-preset-expo": "^5.0.0"
   }
 }
