--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "peerDependencies": {
     "react-native": "*",
-    "react-navigation": "*"
+    "react-navigation-stack": "*"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0",
